          SSL by enabling `ssl_session_cache`.
          See also #136, thanks to @ludovicandrieux.
        + Nginx: Enable TLSv1.3 by default.
          See also #137, thanks to @ludovicandrieux.
        + Nginx/Dovecot: Add new ssl cipher: EECDH+CHACHA20, remove weak one: AES256+EDH.
          See also #138, thanks to @ludovicandrieux.

    * Updated packages:
        + mlmmjadmin -> 3.1.3

iRedMail-1.4.2:
    * Improvements:
        - Remove unused LDAP attribute in iredmail.schema:
            - lastLoginDate
            - lastLoginIP
            - lastLoginProtocol

        - Remove unused sql columns in `vmail` database:
            - mailbox.lastlogindate
            - mailbox.lastloginipv4
            - mailbox.lastloginprotocol

    * Fixed issues:
        - Incorrect PostgreSQL column types in `vmail` and `sogo` databases.

iRedMail-1.4.1:
    * Supports new distribution releases:
        + Debian 11 (bullseye)
        + FreeBSD 13.0

    * Improvements:
        + Introduce new LDAP attribute/value pairs and SQL columns used to
          enable or disable per-user SOGo webmail, calendar and activesync
          services.
        + Add some ban rules in Amavisd:
            + ALLOW_MS_OFFICE: Allow all Microsoft Office documents.
            + ALLOW_MS_WORD: Allow Microsoft Word documents (.doc, .docx).
            + ALLOW_MS_EXCEL: Allow Microsoft Excel documents (.xls, .xlsx).
            + ALLOW_MS_PPT: Allow Microsoft PowerPoint documents (.ppt, .pptx).

    * Fixed issues:
        - Allow more sendgrid HELO hostnames.
          Thanks to Jim Nelin for the feedback.

    * Updated packages:
        + iRedAdmin -> 1.5
        + iRedAPD -> 5.0.3
        + netdata -> 1.31.0
        + mlmmjadmin -> 3.1.2
    
iRedMail-1.4.0:
    * Supports new distribution releases:
        + CentOS 8 Stream. All backends are supported: MariaDB, PostgreSQL, OpenLDAP.
        + AlmaLinux 8. All backends are supported: MariaDB, PostgreSQL, OpenLDAP.