@@ -2,5 +2,5 @@ SHA256 (misc/uwsgi-2.0.19.1.tar.gz) = 56be307f3bfcf6cc074f4354de6403778d7ec3e44a
 SHA256 (misc/iRedAdmin-1.5.tar.gz) = e811f757a3f592a83356cbb4a19df9193e363918c8b9c49dc121dfa12e4f8837
 SHA256 (misc/mlmmjadmin-3.1.3.tar.gz) = 113887fd36e386be0c5bd1b1372860486c05d98c1c0435a6d1fb758c001fec72
 SHA256 (misc/iRedAPD-5.0.3.tar.gz) = e0a059c1fc028eaa28f82df4683d1cab9241f99686896ccc580a6d1552811fc7
-SHA256 (misc/roundcubemail-1.4.11-complete.tar.gz) = ac7319070c305fc2c88c7723605562d8607030732beee931cdb4091cf05e69b7
+SHA256 (misc/roundcubemail-1.5.0-complete.tar.gz) = 2fdc7b1663e5e99706bff34093aa4731d4bf22a58cb555a2520ed1bde78d012c
 SHA256 (misc/fail2ban-0.11.1.tar.gz) = 71d2a52b66bb0f87ac3812246bdd3819ec561913cd44afd39130a342f043aa6d
