@@ -2,4 +2,4 @@ e811f757a3f592a83356cbb4a19df9193e363918c8b9c49dc121dfa12e4f8837  misc/iRedAdmin
 113887fd36e386be0c5bd1b1372860486c05d98c1c0435a6d1fb758c001fec72  misc/mlmmjadmin-3.1.3.tar.gz
 e0a059c1fc028eaa28f82df4683d1cab9241f99686896ccc580a6d1552811fc7  misc/iRedAPD-5.0.3.tar.gz
 e68b506834dc148ae3e1f60980cb68ef3fd5433afd12d43049625e9c78247676  misc/netdata-v1.31.0.gz.run
-ac7319070c305fc2c88c7723605562d8607030732beee931cdb4091cf05e69b7  misc/roundcubemail-1.4.11-complete.tar.gz
+2fdc7b1663e5e99706bff34093aa4731d4bf22a58cb555a2520ed1bde78d012c  misc/roundcubemail-1.5.0-complete.tar.gz
