@@ -13,5 +13,6 @@ failregex = \[<HOST>\]: SASL (PLAIN|LOGIN) authentication failed
             reject: RCPT from .*\[<HOST>\]: 554 5.7.1
             reject: RCPT from .*\[<HOST>\]:\d+: 550 5.5.1 Protocol error
             warning: Illegal address syntax from (.*)\[<HOST>\] in RCPT command
+            postfix\/submission\/smtpd.*: too many errors after AUTH from .*\[<HOST>\]
 
 ignoreregex =
