@@ -9,6 +9,7 @@ iRedMail-1.4.3:
           See also #138, thanks to @ludovicandrieux.
 
     * Updated packages:
+        + Roundcube webmail -> 1.5.0. Note: PHP 5.5 or later is required.
         + mlmmjadmin -> 3.1.3
 
 iRedMail-1.4.2:
